# streamlit-searchbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  cspell.json  example.py  example_ci.py  pyproject.toml  setup.py
.github/actions/setup_backend/: action.yml
.github/actions/setup_frontend/: action.yml
.github/workflows/: ci.yml  frontend.yml  pre-commit.yml  pyright.yml  run-pre-commit.yml  run-pyright.yml  tests.yml
assets/: test.py
streamlit_searchbox/: __init__.py
streamlit_searchbox/frontend/: .prettierignore  package-lock.json  package.json
streamlit_searchbox/frontend/public/: bootstrap.min.css  index.html
streamlit_searchbox/frontend/src/: Searchbox.tsx  icons.tsx  index.tsx  styling.tsx
tests/: playwright.py  test_conversion.py  utils.py
