[project]
name = "streamlit-searchbox"
version = "0.1.23"
description = "Autocomplete Searchbox that dynamically updates suggestions based on a provided function."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # version >1.37 reruns can lead to constant iFrame resets
  # version 1.35/1.36 also have reset issues but less frequent
  "streamlit >= 1.0",
]
authors = [
  {name = "m-wrzr"}
]

[dependency-groups]
dev = [
  # NOTE: run `uv playwright install` to install the browser drivers
  "playwright==1.56.0",
  "pre-commit==4.5.0",
  "pyright==1.1.407",
  "pytest==9.0.1",
  "pytest-playwright==0.7.2",
  "ruff==0.14.7",
  "wikipedia==1.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["streamlit_searchbox*"]
exclude = ["streamlit_searchbox/frontend/node_modules/flattened"]  # exclude packages matching these glob patterns (empty by default)

[tool.ruff]

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "streamlit_searchbox/frontend/node_modules",
    "venv",
]

line-length = 88
target-version = "py311"

[tool.pyright]

exclude = [
    "build",
    "dist",
    ".venv",
    ".vscode",
    ".ruff_cache",
    ".pytest_cache",
    ".github",
    "venv**",
    "**/node_modules",
    "**/__pycache__",
    "tests_local/**",
    "streamlit_searchbox/frontend",
]
